<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Brain Trainer"</string>
    <string name="action_settings">Settings</string>
    <string name="game_title">Brain Trainer</string>
    <string name="continue_game">Continue</string>
    <string name="new_game">New Game</string>
    <string name="about_game">About</string>
    <string name="exit_game">Exit</string>

    <string name="about_title">Game Instructions</string>
    <string name="about_info">
      This maths game randomly generates equations based on a preselected difficulty level.\n\n
      The objective is to answer each question before the time runs out.\n\n
      To play, select your desired difficulty and press the # key to start the game.\n\n
      Use the onscreen keypad to answer each question and use the # key to submit your answer.\n\n
      Pressing the # key again will progress onto the next question.\n\n
      Hints can be enabled from the settings menu.</string>

    <string name="setting_title">Settings</string>
    <string name="hint_title">Hints</string>
    <string name="hint_summary">Grants four attempts per question and hints if an incorrect answer is greater than or less than the correct answer </string>

    <string name="difficulty_label">Difficulty</string>
    <string name="novice_label">Novice</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="guru_label">Guru</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_DEL">DEL</string>
    <string name="button_minus">-</string>
    <string name="button_hash">#</string>

    <string name="StartMSG">Press # To Start</string>


</resources>
