<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:id="@+id/buttons">

    <TextView
        android:id="@+id/questNUM"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:textSize="50sp"
        android:layout_above="@+id/questionField"
        android:layout_toStartOf="@+id/timerField" />
    <TextView
        android:id="@+id/timerField"
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/questionField" />
    <TextView
        android:id="@+id/questionField"
        android:layout_centerHorizontal="true"
        android:layout_width="375dp"
        android:layout_height="130dp"
        android:layout_below="@+id/timerField"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="@drawable/border"
        android:text="@string/StartMSG"/>
    <TextView
        android:id="@+id/gameInfo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/questionField"/>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*"
        android:layout_alignParentBottom="true">
        <TableRow>
            <Button
                android:id="@+id/keypad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                />
            <Button
                android:id="@+id/keypad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_2"/>
            <Button
                android:id="@+id/keypad3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/keypad4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                />
            <Button
                android:id="@+id/keypad5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_5"
                />
            <Button
                android:id="@+id/keypad6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_6"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/keypad7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_7"
                />
            <Button
                android:id="@+id/keypad8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_8"
                />
            <Button
                android:id="@+id/keypad9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_9"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/keypadDEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_DEL"
                />
            <Button
                android:id="@+id/keypad0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_0"
                />
            <Button
                android:id="@+id/keypadMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_minus"
                />
        </TableRow>
            <Button
                android:id="@+id/keypadHash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_hash"
                />
    </TableLayout>

</RelativeLayout>